[build-system]
requires = [
    "hatchling>=1.21.1",
    "jupyterlab>=4.0.0,<5",
    "hatch-nodejs-version>=0.3.2",
]
build-backend = "hatchling.build"

[project]
name = "rhino_inside_jupyter"
description = "A Jupyter Widget for rendering Rhinoo33dm models in Jupyter"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.9"
authors = [
    { name = "Maryanne Wachter", email = "mclare@utsv.net" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ipywidgets>=8.0.0",
]
version = "0.1.0.dev0"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/myorg/rhino-inside-jupyter"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
artifacts = [
    "rhino_inside_jupyter/nbextension/index.*",
    "rhino_inside_jupyter/labextension/*.tgz",
    "rhino_inside_jupyter/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"rhino_inside_jupyter/nbextension" = "share/jupyter/nbextensions/rhino_inside_jupyter"
"rhino_inside_jupyter/labextension" = "share/jupyter/labextensions/rhino-inside-jupyter"
"./install.json" = "share/jupyter/labextensions/rhino-inside-jupyter/install.json"
"./rhino_inside_jupyter.json" = "etc/jupyter/nbconfig/notebook.d/rhino_inside_jupyter.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "rhino_inside_jupyter/nbextension/index.js",
    "rhino_inside_jupyter/labextension/package.json",
]
skip-if-exists = [
    "rhino_inside_jupyter/nbextension/index.js",
    "rhino_inside_jupyter/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.8.3",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "rhino_inside_jupyter/_version.py" },
]

[tool.tbump.version]
current = "0.1.0.dev0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
